# simplified-sdra

./: .gitattributes  .gitignore  README.md  combined_prompt.txt  combined_user_prompt.txt  finalDeliveryUserPrompt.txt  final_report_20250913_214049.html  final_report_20250914_123027.html  final_report_20250914_154242.html  final_report_20250914_155047.html  final_report_20250914_162347.html  final_report_20250914_164026.txt  final_report_20250921_124000.html  final_report_20250921_125525.html  final_report_20250921_134344.html  final_report_20250922_221825.html  firstphase_output.txt  firstphase_outputs.b64.json  firstphasemergedoutput.json  firstphasemergedoutput_round1.txt  parsedjson.txt  parsedrequirements.txt  pyproject.toml  reportTeamplate.html  sdra-context.txt  secondphase_output.txt  unmerged_outputs.b64.json  unmerged_outputs.txt  unmerged_outputs_round1.txt
exampleoutputs/: trustboundaries.txt
prompts/v1/: DREAD_AnnotatedDFD_Mitigations_System_Prompt.txt  DREAD_AnnotatedDFD_Mitigations_User_Prompt.txt  Trust_DFD_STRIDE_System_Prompt.txt  Trust_DFD_STRIDE_User_Prompt.txt  finalDeliverySystemPrompt.txt  finalDeliveryUserPrompt - Copy.txt  finalDeliveryUserPrompt.txt
schemas/: annotated_dfd.schema.json  dfd.schema.json  dread.schema.json  final_deliverables.schema.json  mitigations.schema.json  stride_matrix.schema.json  trust_boundaries.schema.json
src/myagents/: config.py  document_parser.py  (+5 more)
tests/: conftest.py  test_simplified_sdra.py
vulnerable_applications/: ApplicationTracker.xlsx  GoodPromptForGettingVulnerabilities.txt  Requirements.docx
(+40 files in other folders)
